Resolve UBR-82 & UBR-83

--- a/api/bundle.yaml
+++ b/api/bundle.yaml
@@ -772,6 +772,7 @@ paths:
                 type: object
                 required:
                   - data
+                  - pagination
                 properties:
                   data:
                     type: array
