--- a/api/v1/paths/users/_index.yaml
+++ b/api/v1/paths/users/_index.yaml
@@ -43,6 +43,7 @@ get:
             type: object
             required:
               - data
+              - pagination
             properties:
               data:
                 type: array
