Add id and is_winner in tender respons table

--- a/api/v1/schemas/Respond.yaml
+++ b/api/v1/schemas/Respond.yaml
@@ -1,11 +1,16 @@
 type: object
 required:
+  - id
   - tender_id
   - organization_id
   - price
   - is_nds_price
+  - is_winner
   - created_at
 properties:
+  id:
+    type: integer
+    example: 1
   tender_id:
     type: integer
     example: 1
@@ -18,6 +23,9 @@ properties:
   is_nds_price:
     type: boolean
     example: true
+  is_winner:
+    type: boolean
+    example: false
   created_at:
     type: string
     format: date-time
