Hid pg_cron in migrations, fix swagger

--- a/api/bundle.yaml
+++ b/api/bundle.yaml
@@ -3024,7 +3024,7 @@ components:
         objects:
           $ref: '#/components/schemas/Objects'
         status:
-          type: string
+          type: number
         verification_status:
           $ref: '#/components/schemas/verification_status'
         reception_start:
