--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,23 +11,15 @@ services:
       POSTGRES_PASSWORD: "postgres"
       POSTGRES_DB: "ubrato"
 
-  typesense:
-    image: typesense/typesense:26.0-amd64
-    container_name: ubrato-typesense
-    restart: on-failure
-    ports:
-      - "8108:8108"
-    command: '--data-dir /data --api-key=xyz --enable-cors'
-
-  service-nats:
-    container_name: service-nats
-    image: nats:2.10.14-alpine3.19
-    ports:
-      - "4222:4222"
-      - "6222:6222"
-      - "8222:8222"
-    command:
-      - "--name=service-nats"
-      - "--http_port=8222"
-      - "--js"
-      - "--sd=/data"
+  # service-nats:
+  #   container_name: service-nats
+  #   image: nats:2.10.14-alpine3.19
+  #   ports:
+  #     - "4222:4222"
+  #     - "6222:6222"
+  #     - "8222:8222"
+  #   command:
+  #     - "--name=service-nats"
+  #     - "--http_port=8222"
+  #     - "--js"
+  #     - "--sd=/data"
