--- a/api/v1/schemas/Tender.yaml
+++ b/api/v1/schemas/Tender.yaml
@@ -57,7 +57,7 @@ properties:
   objects:
     $ref: "catalog/Objects.yaml"
   status:
-    type: number
+    $ref: "../properties/status.yaml"
   verification_status:
     $ref: "../properties/verification_status.yaml"
   reception_start:
