--- a/api/v1/paths/organizations/portfolio/_id.yaml
+++ b/api/v1/paths/organizations/portfolio/_id.yaml
@@ -53,7 +53,8 @@ put:
             attachments:
               type: array
               items:
-                $ref: "../../../properties/url.yaml"
+                type: string
+                format: uri
               maxItems: 8
   responses:
     '200':
