--- a/api/v1/paths/organizations/profile/brand.yaml
+++ b/api/v1/paths/organizations/profile/brand.yaml
@@ -26,7 +26,8 @@ put:
               description: Название бренда
               example: "Ubrato"
             avatar_url:
-              $ref: "../../../properties/url.yaml"   
+              type: string
+              format: uri
   responses:
     '200':
       description: Success
