--- a/api/v1/paths/tenders/_id/_index.yaml
+++ b/api/v1/paths/tenders/_id/_index.yaml
@@ -72,11 +72,13 @@ put:
             wishes:
               type: string
             specification:
-              $ref: "../../../properties/url.yaml"
+              type: string
+              format: uri
             attachments:
               type: array
               items:
-                $ref: "../../../properties/url.yaml"
+                type: string
+                format: uri
               maxItems: 8
             services:
               type: array
