--- a/api/v1/schemas/Tender.yaml
+++ b/api/v1/schemas/Tender.yaml
@@ -46,11 +46,13 @@ properties:
   wishes:
     type: string
   specification:
-    $ref: "../properties/url.yaml"
+    type: string
+    format: uri
   attachments:
     type: array
     items:
-      $ref: "../properties/url.yaml"
+      type: string
+      format: uri
     maxItems: 8
   services:
     $ref: "catalog/Services.yaml"
