--- a/api/v1/paths/organizations/portfolio/_index.yaml
+++ b/api/v1/paths/organizations/portfolio/_index.yaml
@@ -66,7 +66,8 @@ post:
             attachments:
               type: array
               items:
-                $ref: "../../../properties/url.yaml"
+                type: string
+                format: uri
               maxItems: 8
   responses:
     '200':
