--- a/api/v1/paths/tenders/_index.yaml
+++ b/api/v1/paths/tenders/_index.yaml
@@ -93,11 +93,13 @@ post:
             wishes:
               type: string
             specification:
-              $ref: "../../properties/url.yaml"
+              type: string
+              format: uri
             attachments:
               type: array
               items:
-                $ref: "../../properties/url.yaml"
+                type: string
+                format: uri
               maxItems: 8
             services:
               type: array
