--- a/api/v1/paths/users/_id/_index.yaml
+++ b/api/v1/paths/users/_id/_index.yaml
@@ -66,7 +66,8 @@ put:
             phone:
               $ref: "../../../properties/phone.yaml"
             avatar_url:
-              $ref: "../../../properties/url.yaml"
+              type: string
+              format: uri
   responses:
     '200':
       description: Success
